# MedTechAi-RCM-MedCode-AIAssist-BE

./: .gitignore  .renderignore  ARCHITECTURE_DIAGRAMS.md  CURRENT_STATUS.md  DEPLOYMENT_ACTION_PLAN.md  Dockerfile  Dockerfile.render  FINAL_TEST_RESULTS.md  FRAMEWORK_ANALYSIS.md  FRONTEND.md  FRONTEND_DEPLOYMENT_READY.md  HOW_TO_CONFIGURE_API_KEY.md  HOW_TO_STOP_PROCESSES.md  INTEGRATION_TESTS_SUMMARY.md  LLM_USAGE_SUMMARY.md  Makefile  QUICK_TEST_REFERENCE.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_PYTHON_DEPLOYMENT.md  RUN_TESTS_WITH_API_KEY.md  SUPABASE_INTEGRATION.md  TESTING_GUIDE.md  TEST_RESULTS_REPORT.md  UAE_HEALTH_INTEGRATION_GUIDE.md  UAE_HEALTH_SCHEMA_ANALYSIS.md  USECASE1_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  deploy-render.sh  deploy.sh  docker-compose.yml  env.example  main.py  medtechai_rcm.db  pyproject.toml  pytest.ini  render-docker.yaml  render-python.yaml  render-simple.yaml  render.yaml  (+8 more)
.github/workflows/: integration-tests.yml
api/: index.py
app/: __init__.py  main.py
app/agents/: __init__.py  base_agent.py  claim_processor.py  code_validation_agent.py  denial_analyzer.py  icd_to_cpt_agent.py  medical_validator.py  note_to_icd_agent.py  parser_agent.py  summarizer_agent.py  uae_health_parser_agent.py
app/config/: supabase.py
app/core/: __init__.py  database.py
app/models/: __init__.py  agent_config.py  insurance_claim.py  medical_code.py  uae_health.py  validation_result.py
app/routes/: connectivity.py  database.py  medical_codes.py  orchestrator.py  rcm_api.py  supabase.py  uae_health.py  usecase1.py
app/schemas/: __init__.py  insurance_claim.py  medical_code.py  validation_result.py
app/services/: prompt_templates.py
app/services/LLM_interactions/: LLM_check.py
app/services/orchestrator/: enhanced_orchestrator.py
app/services/pipeline/: usecase1_pipeline.py
app/services/rag/: chroma_store.py
app/services/transcription/: google_streaming.py
app/utils/: __init__.py  llm.py  supabase_client.py
config/: __init__.py  settings.py
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: RCM metrics & Denial Codes.xlsx
frontend/dlrcm-main/: .env.example  .gitignore  DEPLOYMENT.md  README.md  SOAP_NOTES_FEATURE.md  index.html  package.json  vite.config.ts
frontend/dlrcm-main/src/: App.tsx  index.css
frontend/dlrcm-main/src/components/: AIInsights.tsx  Header.tsx  Logo.tsx  MetricsGrid.tsx  Navigation.tsx  RecentActivity.tsx  RiskCard.tsx  RiskChart.tsx
frontend/dlrcm-main/src/pages/: ClaimEdit.tsx  ClaimsReview.tsx  Dashboard.tsx  Settings.tsx  UploadEDI.tsx
frontend/dlrcm-main/src/types/: claim.ts
frontend/dlrcm-main/src/utils/: parseClaimSubmission.ts
frontend/dlrcm-main/supabase/functions/improve-clinical-notes/: index.ts
frontend/dlrcm-main/supabase/functions/suggest-cpt-codes/: index.ts
frontend/dlrcm-main/supabase/functions/suggest-icd-codes/: index.ts
scripts/: __init__.py  init.py  run_integration_tests.sh
streamlit_app/: app.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_ai_suggested_cpt_codes.py  test_ai_suggested_icd_codes.py  test_api_endpoints.py  test_external_connectivity.py  test_workflow_validation.py
tests/test_data/: sample_claims.csv
